Fix start-btn width, show new activity properly, unshift past activity cards, and display example text when localStorage is cleared, not on refresh

--- a/styles.css
+++ b/styles.css
@@ -187,6 +187,10 @@ input[type="submit"] {
   margin-right: 7.5vw;
 }
 
+#submit{
+  width: 18.5vw;
+}
+
 .category-btn {
   width: 11vw;
   height: 10vh;
@@ -397,6 +401,14 @@ input[type="submit"] {
 .reset-new-activity{
   display: flex;
   justify-content: space-between;
+}
+
+.start-again {
+  border-radius: 10px;
+    margin-top: 2vh;
+    margin-right: 0.35vw;
+    width: 13vw;
+    height: 5vh;
 }
 
 .hidden {
